tests/NormalTests/paczka1/small_fuzzy/52453453.err
Error in line 3: oRuCmD53D S420 49,7
Error in line 11: fOHfuYl S740 25,2
